Refactor to use application.proeprties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=de
+
+guru.db.username=matt
+guru.db.password=pass
+guru.db.dburl=host
+
+guru.jms.username=j
+guru.jms.password=m
+guru.jms.dburl=s
