--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ guru.db.username=matt
 guru.db.password=pass
 guru.db.dburl=host
 
-guru.jms.username=j
-guru.jms.password=m
-guru.jms.dburl=s
+#guru.jms.username=j
+#guru.jms.password=m
+#guru.jms.dburl=s
